infra/k8s/kafka-depl.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kafka1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka1
  template:
    metadata:
      labels:
        app: kafka1
    spec:
      containers:
      - name: kafka1
        image: wurstmeister/kafka
        ports:
        - containerPort: 9092
