infra/k8s/kafka-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kaf1
spec:
  type: LoadBalancer
  ports:
  - port: 9092
    name: port-9092
    protocol: TCP
  selector:
    app: kafka1
