infra/k8s/stat-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stat-depl
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: stat
  template:
    metadata:
      labels:
        app: stat
    spec:
      containers:
        - name: stat
          image: xiangjieli/stat
---
apiVersion: v1
kind: Service
metadata:
  name: stat-srv
spec:
  selector:
    app: stat
  ports:
    - name: port-8085
      protocol: TCP
      port: 8085
      targetPort: 8085
