infra/k8s/subscriptions-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subscriptions-depl
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: subscriptions
  template:
    metadata:
      labels:
        app: subscriptions
    spec:
      containers:
        - name: subscriptions
          image: xiangjieli/subscriptions
---
apiVersion: v1
kind: Service
metadata:
  name: subscriptions-srv
spec:
  selector:
    app: subscriptions
  ports:
    - name: port-8084
      protocol: TCP
      port: 8084
      targetPort: 8084
