infra/k8s/users-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-depl
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: users
          image: xiangjieli/users
---
apiVersion: v1
kind: Service
metadata:
  name: users-srv
spec:
  selector:
    app: users
  ports:
    - name: port-8080
      protocol: TCP
      port: 8081
      targetPort: 8081




# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: users-srv2
# spec:
#   type: LoadBalancer
#   selector:
#     app: users
#   ports:
#     - name: port-8080
#       protocol: TCP
#       port: 8080
#       targetPort: 8080
