infra/k8s/zookeeper-depl.yaml

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: zookeeper1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper1
  template:
    metadata:
      labels:
        app: zookeeper1
    spec:
      containers:
      - name: zookeeper1
        image: digitalwonderland/zookeeper
        ports:
        - containerPort: 2181
        - containerPort: 2888
        - containerPort: 3888
---
apiVersion: v1
kind: Service
metadata:
  name: zoo1
spec:
  type: LoadBalancer
  ports:
  - name: port-2181
    port: 2181
    protocol: TCP
  - name: port-2888
    port: 2888
    protocol: TCP
  - name: port-3888
    port: 3888
    protocol: TCP
  selector:
    app: zookeeper1
