infra/k8s/ingress-svc.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/cors-allow-credentials: 'true'
    nginx.ingress.kubernetes.io/cors-allow-origin: 'http://localhost:3000'
    nginx.ingress.kubernetes.io/cors-allow-methods: 'GET, PUT, POST, DELETE, PATCH, OPTIONS'
    nginx.ingress.kubernetes.io/cors-allow-headers: 'DNT, User-Agent, Content-Type, Content-Length, Accept-Encoding, X-CSRF-Token, Authorization, accept, origin, Cache-Control, X-Requested-With, set-cookie, cookie, Keep-Alive, X-CustomHeader, X-Requested-With,If-Modified-Since'
spec:
  rules:
    - host: techcareerhub.dev
      http:
        paths:
          - path: /api/jobs/?(.*)
            backend:
              serviceName: jobs-srv
              servicePort: 8080
          - path: /api/users/?(.*)
            backend:
              serviceName: users-srv
              servicePort: 8081
          - path: /api/applications/?(.*)
            backend:
              serviceName: applications-srv
              servicePort: 8082          
          - path: /api/profiles/?(.*)
            backend:
              serviceName: profiles-srv
              servicePort: 8083
          - path: /api/subscriptions/?(.*)
            backend:
              serviceName: subscriptions-srv
              servicePort: 8084            
          - path: /api/stat/?(.*)
            backend:
              serviceName: stat-srv
              servicePort: 8085                          
        #   - path: /?(.*)
        #     backend:
        #       serviceName: frontend-srv
        #       servicePort: 3000
